# kquickcharts

./: CMakeLists.txt  KQuickChartsConfig.cmake.in
autotests/: CMakeLists.txt
controls/: CMakeLists.txt
examples/charts/: BarChart.qml  CMakeLists.txt  PieChart.qml  RangeEditor.qml  main.qml
src/: CMakeLists.txt  ChartsPlugin.cpp
src/datasource/: ArraySource.cpp  ChartDataSource.cpp  ChartDataSource.h  HistoryProxySource.cpp  MapProxySource.cpp  ModelSource.cpp
src/scenegraph/: BarChartMaterial.cpp  BarChartMaterial.h  BarChartNode.cpp  LineSegmentNode.cpp  PieChartMaterial.cpp  PieChartMaterial.h  PieChartNode.cpp  ShaderDataWriter.cpp  ShaderDataWriter.h
src/shaders/: CMakeLists.txt  barchart.frag  barchart.vert  linechart.frag  linechart.vert  piechart.frag  piechart.vert  sdf.glsl
